src/test/ui/union/normalization-failure-issue-81199-autofix.stderr
error[E0277]: the trait bound `T: Pointee` is not satisfied
  --> $DIR/normalization-failure-issue-81199-autofix.rs:7:40
   |
LL |     components: std::mem::ManuallyDrop<PtrComponents<T>>,
   |                                        ^^^^^^^^^^^^^^^^ the trait `Pointee` is not implemented for `T`
   |
note: required by a bound in `PtrComponents`
  --> $DIR/normalization-failure-issue-81199-autofix.rs:12:25
   |
LL | struct PtrComponents<T: Pointee + ?Sized> {
   |                         ^^^^^^^ required by this bound in `PtrComponents`
help: consider further restricting this bound
   |
LL | union PtrRepr<T: ?Sized + Pointee> {
   |                         +++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
